<resources>
    <string name="app_name">Craft</string>
    <string name="ic_logotype">logotype</string>
    <string name="ic_email">icon_email</string>
    <string name="ic_lock">icon_lock</string>
    <string name="ic_basket">ic_basket</string>
    <string name="ic_cross">ic_cross</string>
    <string name="ic_eye_wheel">ic_eye_wheel</string>
    <string name="ic_heart">ic_heart</string>
    <string name="ic_time">ic_time</string>
    <string name="ic_user_profile">ic_user_profile</string>
    <string name="ic_settings">ic_settings</string>
    <string name="ic_shopping_bag">ic_shopping_bag</string>
    <string name="ic_korzina">ic_korzina</string>
    <string name="ic_group_27">ic_group_27</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="fio">ФИО</string>
    <string name="phone">Телефон</string>
    <string name="lgot">Выберите льгот</string>
    <string name="ic_back">Назад</string>
    <string name="profile">Профиль</string>
    <string name="my_buy">Мои покупки</string>
    <string name="lgot2">Льгот</string>
    <string name="change">Изменить</string>
    <string name="settings">Настройки</string>
    <string name="ready">Готово</string>
    <string name="basket">Корзина</string>
    <string name="buy">Оплатить</string>
    <string name="like">Понравившиеся</string>
    <string name="attractions">Аттракционы</string>
    <string name="sessions">Сеансы</string>
    <string name="rub">Руб.</string>
    <string name="pay">Оплата</string>
    <string name="pay1">Оплатить</string>
    <string name="card">Привязать карту</string>
    <string name="back">Вернуться на главную</string>
    <string name="nomer">Номер карты</string>
    <string name="mm">ММ</string>
    <string name="gg">ГГ</string>
    <string name="name">Имя держателя</string>
    <string name="cvc2">CVC2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>