<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_basket"
        android:enabled="true"
        android:icon="@drawable/ic_basket"
        android:title="@string/basket"/>
    <item
        android:id="@+id/page_choice"
        android:enabled="true"
        android:icon="@drawable/ic_eye_wheel"
        android:title="Аттракционы"/>
    <item
        android:id="@+id/page_like"
        android:enabled="true"
        android:icon="@drawable/ic_heart"
        android:title="@string/like" />
    <item
        android:id="@+id/page_profile"
        android:enabled="true"
        android:icon="@drawable/ic_user_profile"
        android:title="@string/profile" />
</menu>